<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/creation_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:navigationIcon="@drawable/arrow_back_24dp_e8eaed_fill0_wght400_grad0_opsz24"
            app:title="@string/creation_title"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/creation_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/dark_gray"
        app:dividerThickness="2dp"
        app:layout_constraintTop_toBottomOf="@+id/creation_top_bar" />


    <TextView
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/creation_divider"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/creation_hint"
        app:layout_constraintTop_toBottomOf="@+id/text_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:padding="18dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/time_selectors"
        layout="@layout/time_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_selector"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        app:endIconMode="dropdown_menu"
        app:layout_constraintTop_toBottomOf="@id/time_selectors">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/category"
            android:inputType="none"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/category_selector"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:hint="@string/description_hint"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/description"
            android:paddingVertical="30dp"
            android:textSize="20sp"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_button"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_layout"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/validation"
        app:icon="@drawable/check_24dp_e8eaed_fill0_wght400_grad0_opsz24"
        android:enabled="false"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>